--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -14,6 +15,10 @@
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^2.6.14",
+    "vue-awesome-notifications": "^3.1.1",
+    "vue-axios": "^3.5.2",
+    "vue-cookies": "^1.8.3",
+    "vue-router": "^3.6.5",
     "vue-tailwind": "^2.5.1",
     "vuetify": "^2.6.0"
   },
